syntax = "proto3";

package houston;

service Houston {
	rpc RunPipeline (RunPipelineRequest) returns (RunPipelineResponse) { }
}

message RunPipelineRequest {
	repeated string scripts = 1;
}

message RunPipelineResponse {
	int32 exitCode = 1;
	repeated RunPipelineInstruction instructions = 2;
}

message RunPipelineInstruction {
	string script = 1;
	bool hasError = 2;
	optional string stdout = 3;
	optional string stderr = 4;
}
